# small-seo-tools-full-stack

./: .replit  DEPLOYMENT_GUIDE.md  next.config.js  package-lock.json  package.json  pyproject.toml  railway.toml  server-requirements.txt  tsconfig.json  vercel.json  vite.config.ts
attached_assets/: Pasted-Build-a-fully-working-Schema-Markup-Tester-Tool-using-Python-with-a-modern-colorful-and-respon-1750023018045_1750023018047.txt  Pasted-Build-a-powerful-and-fully-dynamic-tools-website-like-smallseotools-com-with-features-like-WordPress-1750006890758_1750006890761.txt  Pasted-Create-a-fully-functional-modern-and-stylish-Notepad-web-tool-using-Python-Flask-or-FastAPI-The-1750023503222_1750023503224.txt  Pasted-Create-a-fully-functional-modern-and-stylish-Notepad-web-tool-using-Python-Flask-or-FastAPI-The-1750023781955_1750023781958.txt  Pasted-Create-a-professional-and-fully-functional-Google-AdSense-Ban-Checker-Tool-using-Python-for-back-1750030391987_1750030391989.txt  Pasted-Create-a-professional-visually-modern-website-tools-app-with-Python-backend-Flask-or-FastAPI-and--1750028244255_1750028244258.txt
client/: vercel.json
server/: advanced-pdf-cracker.py  background-remover.py  content-preserving-pdf-cracker.py  csv-to-json-converter.py  enhanced-pdf-cracker.py  html-to-markdown-converter.py  hybrid-pdf-processor.py  icon-generator.ts  image-dpi-converter.py  image-to-text-ocr.py  node-pdf-processor.js  pdf-password-remover-simple.py  pdf-password-remover.py  pikepdf-processor.py  profile-picture-maker.py  redirect-checker.py  routes.ts  schema-validator.py  seo-analyzer.ts  simple-pdf-cracker.py  smart-pdf-cracker.py  storage.ts  (+2 more)
shared/: schema.ts
(+99 files in other folders)
