[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "cryptography>=45.0.4",
    "dnspython>=2.7.0",
    "fastapi>=0.115.12",
    "html2text>=2025.4.15",
    "httpx>=0.28.1",
    "markdownify>=1.1.0",
    "passlib>=1.7.4",
    "pillow>=11.2.1",
    "pydantic>=2.11.7",
    "pyjwt>=2.10.1",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "python-whois>=0.9.5",
    "regex>=2024.11.6",
    "requests>=2.32.4",
    "urllib3>=2.4.0",
    "uvicorn>=0.34.3",
]
